--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Rock, Paper, Scissors</h1>
     <div id="choices">
-        <button onclick="playerChoice('rock')">Rock</button>
-        <button onclick="playerChoice('paper')">Paper</button>
-        <button onclick="playerChoice('scissors')">Scissors</button>
+        <button onclick="playerChoice('rock')"><img src="rock.jpg"></button>
+        <button onclick="playerChoice('paper')"><img src="paper.jpg"></button>
+        <button onclick="playerChoice('scissors')"><img src="scissors.jpg"></button>
     </div>
     <div id="result"></div>
     <script src="script.js"></script>
